--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@intercom/messenger-js-sdk": "^0.0.14",
     "@stripe/stripe-js": "^7.3.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.18.0",
@@ -21,7 +22,9 @@
     "react-router-dom": "^7.6.2",
     "react-scroll": "^1.9.3",
     "react-syntax-highlighter": "^15.6.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "react-use-intercom": "^5.4.3",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
