--- a/package.json
+++ b/package.json
@@ -11,20 +11,26 @@
   },
   "dependencies": {
     "@intercom/messenger-js-sdk": "^0.0.14",
+    "@reduxjs/toolkit": "^2.8.2",
     "@stripe/stripe-js": "^7.3.1",
+    "axios": "^1.10.0",
     "embla-carousel-react": "^8.6.0",
+    "formik": "^2.4.6",
     "framer-motion": "^12.18.0",
     "lucide-react": "^0.515.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-calendly": "^4.4.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-scroll": "^1.9.3",
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.5",
     "react-use-intercom": "^5.4.3",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "redux-persist": "^6.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
